# goit_python_web_homework_07

./: README.md  config.ini  main.py  pyproject.toml
migrations/versions/: b184849028c1_init.py
